[gd_scene load_steps=19 format=2]

[ext_resource path="res://Asset/Home/Latar Game Basic.png" type="Texture" id=1]
[ext_resource path="res://Asset/Main Menu/Cerita Anak Button.png" type="Texture" id=2]
[ext_resource path="res://Asset/Main Menu/Tulisan 8.png" type="Texture" id=3]
[ext_resource path="res://Asset/Main Menu/Lagu Button.png" type="Texture" id=4]
[ext_resource path="res://Asset/Main Menu/Permainan Button.png" type="Texture" id=5]
[ext_resource path="res://Scene/Main/MainMenu.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scene/Main/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://Asset/Home/Bintang Putih.png" type="Texture" id=8]
[ext_resource path="res://Asset/Main Menu/8.png" type="Texture" id=9]
[ext_resource path="res://Asset/Main Menu/7.png" type="Texture" id=10]
[ext_resource path="res://Scene/Main/GUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Asset/audio/Mulai_20Petualangan_20mu_20Mencegah_20Kekerasan_20Seksual_20Sekarang.mp3" type="AudioStream" id=12]
[ext_resource path="res://Asset/Main Menu/Setting Button.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.807843, 0.847059, 1, 1 )

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -174.273 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("boy:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.635464 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("girl:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("boy:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("girl:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("boy:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 14.549 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("girl:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -22.0683 ]
}

[sub_resource type="Animation" id=5]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("boy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("girl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="TextureButton" parent="CanvasLayer/GUI/TopButtton" index="0"]
visible = false

[node name="timer" parent="CanvasLayer/GUI/TopButtton" index="1"]
margin_left = 0.0
margin_right = 1063.0

[node name="TextureButton3" parent="CanvasLayer/GUI/TopButtton" index="2"]
margin_left = 1067.0
disabled = false
texture_normal = ExtResource( 13 )

[node name="popUpCredit" parent="CanvasLayer/GUI" index="5"]
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laguButton" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 376.0
margin_right = 1000.0
margin_bottom = 576.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Panel" type="Panel" parent="laguButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 60.0
margin_right = 68.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="laguButton/Panel"]
modulate = Color( 0.109804, 0.109804, 0.109804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Lagu"
align = 1
valign = 1

[node name="permainanButton" type="TextureButton" parent="."]
margin_left = 528.0
margin_top = 256.0
margin_right = 728.0
margin_bottom = 456.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="permainanButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 104.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="permainanButton/Panel"]
modulate = Color( 0.141176, 0.141176, 0.141176, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Permainan"
align = 1
valign = 1

[node name="ceritaButton" type="TextureButton" parent="."]
margin_left = 264.0
margin_top = 384.0
margin_right = 464.0
margin_bottom = 584.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="ceritaButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 61.0
margin_right = 65.0
margin_bottom = 101.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ceritaButton/Panel"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Cerita Anak"
align = 1
valign = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 616, 368 )
lifetime = 5.0
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 600, 400 )
gravity = Vector2( 0, 20 )
angle_curve = SubResource( 2 )
scale_amount = 0.1
color = Color( 1, 1, 1, 0.290196 )

[node name="boy" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 69, 611 )
rotation = 0.0110909
texture = ExtResource( 10 )

[node name="girl" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1199, 605 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/anim = SubResource( 3 )
anims/show = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
bus = "audio"

[connection signal="pressed" from="laguButton" to="." method="_on_laguButton_pressed"]
[connection signal="pressed" from="permainanButton" to="." method="_on_permainanButton_pressed"]
[connection signal="pressed" from="ceritaButton" to="." method="_on_ceritaButton_pressed"]

[editable path="CanvasLayer/GUI"]
